--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   outline: 0;
 }
 
+body {
+  background: #fbfbfb;
+}
+
 @font-face {
   font-family: 'PokemonClassic';
   src: url('/fonts/PokemonClassic.ttf') format('truetype');
